# hermes-curator-evolver

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  after-install.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/phase-1/: PLAN.md
docs/: after-install.md  architecture.md  core-algorithm.md  demo-script.md  hyperagents-design-notes.md  promotion-readiness-plan.md  reddit-launch-kit.md  reddit-launch.md
examples/: README.md  sample-proposal.json  sample-report.json  sample-rollback-manifest.json  sample-skill-managed-block.diff
hermes_curator_evolver/: __init__.py  __main__.py  auto_evolve.py  backfill.py  candidates.py  cli.py  guarded_apply.py  hooks.py  paths.py  proposals.py  reports.py  restore_drill.py  review_queue.py  semantic.py  skill_sources.py  skill_validate.py  storage.py  tools.py  verifier.py
hermes_curator_evolver/skills/curator-evolution/: SKILL.md
tests/: test_auto_evolve.py  test_backfill_sessions.py  test_candidates.py  test_candidates_cli.py  test_cli.py  test_guarded_apply.py  test_plugin_registration.py  test_proposals.py  test_reports.py  test_restore_drill.py  test_review_queue.py  test_safety.py  test_semantic.py  test_skill_validate.py  test_storage.py
