[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "hermes-curator-evolver"
version = "0.9.0"
description = "Plug-and-play evidence-driven skill evolution for Hermes Agent with provenance-safe autorun, historical session backfill, optional semantic/rerank ordering, and guarded apply."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "pingchesu" }]
keywords = [
  "hermes-agent",
  "hermes-plugin",
  "agents",
  "ai-agents",
  "ai-skills",
  "skills",
  "curator",
  "skill-evolution",
  "skill-governance",
  "evidence-driven",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]
dependencies = ["PyYAML>=6"]

[project.optional-dependencies]
dev = ["pytest>=8"]
semantic = ["sentence-transformers>=3"]

[project.scripts]
hermes-curator-evolver = "hermes_curator_evolver.__main__:main"

[project.entry-points."hermes_agent.plugins"]
curator-evolver = "hermes_curator_evolver"

[tool.hatch.build.targets.wheel]
packages = ["hermes_curator_evolver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
